--- a/src/Makefile
+++ b/src/Makefile
@@ -1,21 +1,21 @@
-CC=g++
+CC=gcc
 
-CFLAGS=-Wall -O3 -fopenmp `mpic++ -showme:compile`
+CFLAGS=-Wall -g -fopenmp `mpicc -showme:compile`
 CLIBS=-lm
 
-all: filter_mp filter_mpi
+all: filter_mp #filter_mpi
 
-filter_mp: filter_mp.cpp image.o
-	$(CC) $(CFLAGS) -o filter_mp filter_mp.cpp image.o $(CLIBS)
+filter_mp: filter_mp.c image.o
+	$(CC) $(CFLAGS) -o filter_mp filter_mp.c image.o $(CLIBS)
 
 filter_mpi: filter_mpi.cpp image.o
-	$(CC) $(CFLAGS) -o filter_mpi filter_mpi.cpp image.o $(CLIBS) `mpic++ -showme:link`
+	$(CC) $(CFLAGS) -o filter_mpi filter_mpi.cpp image.o $(CLIBS) `mpicc -showme:link`
 
-image.o: image.cpp image.h
-	$(CC) $(CFLAGS) -c image.cpp $(CLIBS)
+image.o: image.c image.h
+	$(CC) $(CFLAGS) -c image.c
 
 clean:
-	rm filter_mp filter_mpi
+	rm filter_mp filter_mpi *.o
 
 check-syntax:
 	$(CC) $(CFLAGS) -Wextra -Wno-sign-compare -fsyntax-only $(CHK_SOURCES)
