--- a/src/Makefile
+++ b/src/Makefile
@@ -3,13 +3,16 @@ CC=gcc
 CFLAGS=-Wall -g -fopenmp `mpicc -showme:compile`
 CLIBS=-lm
 
-all: filter_mp filter_mpi_basic gen
+all: filter_mp filter_mpi_basic filter_mpi_neigh gen
 
 filter_mp: filter_mp.c image.o
 	$(CC) $(CFLAGS) -o filter_mp filter_mp.c image.o $(CLIBS)
 
 filter_mpi_basic: filter_mpi_basic.c filter_mpi.o image.o
 	$(CC) $(CFLAGS) -o filter_mpi_basic filter_mpi_basic.c filter_mpi.o image.o $(CLIBS) `mpicc -showme:link`
+
+filter_mpi_neigh: filter_mpi_neigh.c filter_mpi.o image.o
+	$(CC) $(CFLAGS) -o filter_mpi_neigh filter_mpi_neigh.c filter_mpi.o image.o $(CLIBS) `mpicc -showme:link`
 
 gen: gen.c image.o
 	$(CC) $(CFLAGS) -o gen gen.c image.o $(CLIBS)
