Added ghost cell distributor.

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,9 +1,9 @@
 CC=gcc
 
-CFLAGS=-Wall -g -fopenmp `mpicc -showme:compile`
+CFLAGS=-Wall -O3 -fopenmp `mpicc -showme:compile`
 CLIBS=-lm
 
-all: filter_mp filter_mpi_basic filter_mpi_neigh gen
+all: filter_mp filter_mpi_basic filter_mpi_neigh filter_mpi_ghost gen
 
 filter_mp: filter_mp.c image.o
 	$(CC) $(CFLAGS) -o filter_mp filter_mp.c image.o $(CLIBS)
@@ -13,6 +13,9 @@ filter_mpi_basic: filter_mpi_basic.c filter_mpi.o image.o
 
 filter_mpi_neigh: filter_mpi_neigh.c filter_mpi.o image.o
 	$(CC) $(CFLAGS) -o filter_mpi_neigh filter_mpi_neigh.c filter_mpi.o image.o $(CLIBS) `mpicc -showme:link`
+
+filter_mpi_ghost: filter_mpi_ghost.c filter_mpi.o image.o
+	$(CC) $(CFLAGS) -o filter_mpi_ghost filter_mpi_ghost.c filter_mpi.o image.o $(CLIBS) `mpicc -showme:link`
 
 gen: gen.c image.o
 	$(CC) $(CFLAGS) -o gen gen.c image.o $(CLIBS)
@@ -24,7 +27,7 @@ image.o: image.c image.h
 	$(CC) $(CFLAGS) -c image.c
 
 clean:
-	rm filter_mp filter_mpi_basic *.o
+	rm filter_mp filter_mpi_basic filter_mpi_ghost filter_mpi_neigh *.o
 
 check-syntax:
 	$(CC) $(CFLAGS) -Wextra -Wno-sign-compare -fsyntax-only $(CHK_SOURCES)
